
    - Fixed a bug that would hang MComix when trying to open a
      password-protected RAR archive.

    - MComix no longer restores the last opened file when it was terminated
      abnormally.

    - Files opened outside of archives are now naturally sorted (e.g. 1.jpg,
      2.jpg, 10.jpg instead of 1.jpg, 10.jpg, 2.jpg). Before, only images
      within archives were naturally sorted.

    - Updated traditional Chinese translation (by Wayne Su).

MComix 0.95
Release date: 05.11.2011

    - mcomix/mcomixstarter.py has been moved out of the mcomix package into
      the root directory of the mcomix distribution.

      Note for packagers: Please do not directly symlink a file in /usr/bin to
      mcomix/run.py! Use the wrapper generated by 'setup.py install' instead,
      or a script similar to mcomixstarter.py.

    - Fixed library freezing up when displaying large amounts of books.
      In addition, changes to cover size and sort order weren't kept
      across program restarts.

    - Fixed "Copy to clipboard" doing nothing on Win32.

    - Fixed freezing on password-protected 7zip archives. Please not that such
      files currently aren't supported and will always appear empty in MComix.

    - The All-in-one package on Win32 should now use the native Windows theme.

    - Fix MComix crashing on startup when opening a file in a directory
      that contains names Python cannot directly convert to Unicode strings.
      (by Joseph Seaton)

    - Selecting "Japanese" from the language dropdown box in the preferences
      dialog reverted the language to English.

    - Added support for reading archives in archives.
      (by David Pineau)

    - Reduced minumum slideshow scrolling delay. With small values here and in
      scrolling distance (e.g. 0.05s, 1px), MComix can simulate "smooth"
      scrolling.

    - The "Dynamic background color" option now uses a color that should be
      closer to a page's actual edge color.
