@@ -39,6 +39,7 @@ RESPONSE_NEW = 8
 # These are bit field values, so only use powers of two.
 STATUS_PAGE, STATUS_RESOLUTION, STATUS_PATH, STATUS_FILENAME, STATUS_FILENUMBER = \
     1, 2, 4, 8, 16
+SHOW_DOUBLE_AS_ONE_TITLE, SHOW_DOUBLE_AS_ONE_WIDE = 1, 2
 
 MAX_LIBRARY_COVER_SIZE = 500
 SORT_NAME, SORT_PATH, SORT_SIZE = 1, 2, 3
